--- a/locales/en.json
+++ b/locales/en.json
@@ -114,8 +114,11 @@
     "SLA description": "SLA description",
     "SLA name": "SLA name",
     "SMS": "SMS",
+    "SMS Template Code": "SMS Template Code",
+    "SMS signature": "SMS signature",
     "September": "September",
     "Service": "Service",
+    "Set up a notification channel to set a notification mode": "Set up a notification channel to set a notification mode",
     "Setting": "Setting",
     "Shanghai": "Shanghai",
     "Shenzhen": "Shenzhen",
@@ -123,6 +126,7 @@
     "Singapore": "Singapore",
     "South China": "South China",
     "Southwest China {num}": "Southwest China {num}",
+    "Submit the following information to the service provider to apply for an SMS template": "Submit the following information to the service provider to apply for an SMS template",
     "Supported Android package versions": "Supported Android package versions",
     "Supported iOS package versions": "Supported iOS package versions",
     "Sydney": "Sydney",
@@ -144,6 +148,7 @@
     "Welcome!": "Welcome!",
     "You can use ClientID and ClientSecret below to access API instance after approval.": "You can use ClientID and ClientSecret below to access API instance after approval.",
     "You do not have enough permissions": "You do not have enough permissions",
+    "You have a notification message from the Erda platform": "You have a notification message from the Erda platform",
     "You haven't joined current organization.": "You haven't joined current organization.",
     "Zhangjiakou": "Zhangjiakou",
     "abnormal": "abnormal",
@@ -205,6 +210,7 @@
     "approver": "approver",
     "archive": "archive",
     "archived": "archived",
+    "are you sure you want to delete this item?": "are you sure you want to delete this item?",
     "are you sure?": "are you sure?",
     "artifact ID": "artifact ID",
     "artifact management": "artifact management",
@@ -261,6 +267,8 @@
     "cellphone": "cellphone",
     "certificate": "certificate",
     "change account permissions": "change account permissions",
+    "channel name": "channel name",
+    "channel type": "channel type",
     "character set": "character set",
     "check detail": "check detail",
     "check log": "check log",
@@ -404,6 +412,7 @@
     "duration unit": "duration unit",
     "duration(month)": "duration(month)",
     "edit": "edit ",
+    "edit notification channel": "edit notification channel",
     "edit {name}": "edit {name}",
     "edited successfully": "edited successfully",
     "enable": "enable",
@@ -566,6 +575,7 @@
     "name": "name",
     "name or surname": "name or surname",
     "network": "network",
+    "new notification channel": "new notification channel",
     "new password": "new password",
     "nickname": "nickname",
     "no available version": "no available version",
@@ -580,8 +590,10 @@
     "not member": "not member",
     "not started": "not started",
     "notification": "notification",
+    "notification channel": "notification channel",
     "notification method": "notification method",
     "notification target": "notification target",
+    "notify strategy information is missing, please complete!": "notify strategy information is missing, please complete!",
     "number": "number",
     "number input": "number input",
     "number of API": "number of API",
@@ -646,8 +658,13 @@
     "please enter the correct format": "please enter the correct format",
     "please enter verification code": "please enter verification code",
     "please enter {name}": "please enter {name}",
+    "please deal with it promptly": "please deal with it promptly",
     "please fill in the correct value": "please fill in the correct value",
+    "please input": "please input",
+    "please input channel name": "please input channel name",
     "please input regexp": "please input regexp",
+    "please input the SMS signature you have applied for on the service provider platform": "please input the SMS signature you have applied for on the service provider platform",
+    "please input the SMS Template Code you have applied for on the service provider platform": "please input the SMS Template Code you have applied for on the service provider platform",
     "please select": "please select",
     "please select labels": "please select labels",
     "please select role for member": "please select role for member",
@@ -775,6 +792,7 @@
     "service": "service",
     "service name": "Service Name",
     "service position": "Service Position",
+    "service provider": "service provider",
     "services": "services",
     "services&tasks": "services&tasks",
     "set as {type}": "set as {type}",
@@ -839,6 +857,7 @@
     "the current request has no {name}": "the current request has no {name}",
     "the current version is deprecated": "the current version is deprecated",
     "the length of {type} must not exceed {maxLength} characters": "the length of {type} must not exceed {maxLength} characters",
+    "the notification channel will be permanently deleted": "the notification channel will be permanently deleted",
     "the same {key} exists": "the same {key} exists",
     "the two passwords you entered do not match": "the two passwords you entered do not match",
     "there can only be one automatically authorized SLA": "there can only be one automatically authorized SLA",
